Fix footer overlap, add fonts and hover interactions and basic styling

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    font-family: Poppins, serif;
+}
+
 .nav-list-container {
     display: flex;
     justify-content: center;
@@ -8,18 +14,43 @@
     }
 }
 
+nav {
+    display: flex;
+    justify-content: center;
+    padding: 25px 0;
+}
+
 .card {
     display: flex;
     flex-direction: column;
+    gap: 10px;
 }
 
 .main {
     display: grid;
     grid-template-columns: 20% 20% 20%;
-    grid-gap: 6%;
+    grid-gap: 30px;
     justify-content: center;
 }
 
 i {
     float: right;
+    color: #fe0000;
+}
+
+i:hover {
+    cursor: pointer;
+}
+
+.home-button {
+    background-color: #fff;
+    border: 3px solid black;
+    padding: 4px 0;
+    font-size: 16px;
+}
+
+.home-button:hover {
+    cursor: pointer;
+    color: white;
+    background-color: #1e1e1e;
 }
